pagina de login

--- a/src/global.css
+++ b/src/global.css
@@ -9,3 +9,11 @@ body {
   box-sizing: border-box;
   font-family: "Gill Sans Extrabold", sans-serif;
 }
+
+textarea:focus,
+input:focus,
+select:focus {
+  box-shadow: 0 0 0 0;
+  border: 0 none;
+  outline: 0;
+}
