--- a/src/global.css
+++ b/src/global.css
@@ -17,3 +17,36 @@ select:focus {
   border: 0 none;
   outline: 0;
 }
+
+/* estilo para formularios e inputs */
+
+form {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-around;
+}
+
+form input {
+  padding: 10px;
+  border-style: none;
+  border: 3px solid #b6b6b6;
+}
+
+form input:focus {
+  box-shadow: 0 0 0 0;
+  border: 3px solid #9c67ce;
+}
+
+button {
+  text-decoration: none;
+  border-style: none;
+  background-color: #9c67ce;
+  padding: 15px;
+  font-size: 1.2em;
+}
+
+button:hover {
+  color: white;
+}
